# dynpax

./: .dockerignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.example  README.md  vcpkg.json
app/include/: App.hpp  Executable.hpp
app/src/: App.cpp  Executable.cpp  FileManager.cpp  main.cpp
app/src/linux/: LinuxLibraryResolver.cpp
cmake/: Dependencies.cmake  LIEF.cmake
